Fixed background issue on mobile

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,4 +1,4 @@
-.navbar{
+.navbar {
     max-width: 100%;
     padding: 5px;
     height: fit-content;
@@ -7,31 +7,37 @@
     top: 0;
     padding: 1rem 20px;
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
     align-items: center;
     user-select: none;
-    gap:20px;
+    gap: 20px;
     z-index: 10;
-    
+    flex-wrap: wrap;
+
 }
-.button-holder{
+
+.button-holder {
     display: flex;
     flex-direction: row;
-    gap:20px;
+    gap: 20px;
 }
-.title-nav{
+
+.title-nav {
     color: #6853de;
     font-weight: 600;
     font-size: larger;
 
 }
-.nav-item{
-width: fit-content;
+
+.nav-item {
+    width: fit-content;
 }
-.Logo{
+
+.Logo {
     height: 5vh;
 }
-.btn{
+
+.btn {
     min-width: 100px;
     font-size: 14px;
     padding: 10px 30px;
@@ -40,43 +46,64 @@ width: fit-content;
     color: white;
     font-weight: 700;
     transition: all 200ms ease-in-out;
+
 }
-.login-btn{
-   background-color: #6853de;
-}
-.logout-btn{
-   background-color: #de5353;
-}
-.restaurant-btn{
+
+.login-btn {
     background-color: #6853de;
 }
-.restaurant-btn:hover{
+
+.logout-btn {
+    background-color: #de5353;
+}
+
+.restaurant-btn {
+    background-color: #6853de;
+}
+
+.restaurant-btn:hover {
 
     background-color: #4f3fad;
     border: white;
 }
-.logout-btn:hover{
+
+.logout-btn:hover {
 
     background-color: #b94242;
     border: white;
 }
-.login-btn:hover{
+
+.login-btn:hover {
 
     background-color: #4f3fad;
     border: white;
 }
+
 @media only screen and (max-width: 600px) {
-    .navbar{
+    .navbar {
         padding-left: 1rem;
-    padding-right: 1rem;
+        padding-right: 1rem;
     }
-  .title-nav{
-    font-size: 16px;
-    scale: 0.8;
-  }
-  .Logo {
-    height: 5vh;
-    transform: translateX(0rem);
-    
-}
+
+    .title-nav {
+        font-size: 16px;
+        scale: 0.8;
+    }
+
+    .Logo {
+        height: 5vh;
+        transform: translateX(0rem);
+
+    }
+
+    .btn {
+        font-size: 12px;
+        min-width: 100px;
+        padding: 5px 15px;
+        border-radius: 3px;
+        border: none;
+        color: white;
+        font-weight: 700;
+        transition: all 200ms ease-in-out;
+    }
 }
