--- a/src/pages/home-page/style.scss
+++ b/src/pages/home-page/style.scss
@@ -1,3 +1,4 @@
-.home-page{
-    height: 100vh;
+.home-page {
+    min-height: 100vh;
+    height: fit-content;
 }
